add pay-client from swagger.json
